--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Michael Chilaka",
   "license": "MIT",
@@ -15,5 +17,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
